Python_OS/Bash_Scripting/error_file.txt
  File "streams_err.py", line 6
    raise ValueError("Now we generate an error to STDERR")
    ^
SyntaxError: invalid syntax
